added initial code